k8s/staging/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-frontend
  namespace: staging
  labels:
    app: portfolio-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-frontend
  template:
    metadata:
      labels:
        app: portfolio-frontend
    spec:
      containers:
        - name: frontend
          image: portfolio-frontend:local # Placeholder, replaced by Jenkins
          imagePullPolicy: IfNotPresent # So it works with manually loaded images
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5
