k8s/staging/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: portfolio-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
