k8s/staging/status-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-status
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: portfolio-status
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
