k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: staging
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
               service:
                 name: portfolio-status
                 port:
                   number: 3001
          - path: /
            pathType: Prefix
            backend:
               service:
                 name: portfolio-frontend
                 port:
                   number: 80
